# agv_slam_navigation

./: .gitignore  README.md
.deepcode/: settings.json
agv_problem/: metadata.yaml
agv_problem2/: metadata.yaml
src/agv_global_planner/: CMakeLists.txt  README.md  package.xml
src/agv_global_planner/config/: astar.rviz
src/agv_global_planner/include/agv_global_planner/: astar_planner.hpp
src/agv_global_planner/launch/: astar_planner.launch.py
src/agv_global_planner/src/: astar_planner.cpp  astar_planner_node.cpp
src/algorithm_tests/: CMakeLists.txt  README.md  package.xml
src/algorithm_tests/include/: dwa.hpp  icp.hpp  matrix_demo.hpp
src/algorithm_tests/src/: icp.cpp  main.cpp  matrix_demo.cpp
src/cartographer_math_test/: CMakeLists.txt  README.md  package.xml
src/cartographer_math_test/src/: test_affine_transform.cpp  test_ceres_optimization.cpp  test_lidar_polar_to_cartesian.cpp  test_rigid_transform.cpp
src/demo_action/: CMakeLists.txt  README.md  package.xml
src/demo_action/action/: CountToN.action
src/demo_action/src/: count_client.cpp  count_server.cpp  count_server_lifecycle.cpp
src/ekf_tests/: CMakeLists.txt  README.md  package.xml
src/ekf_tests/include/ekf_tests/: ekf_localization.hpp
src/ekf_tests/src/: ekf_localization.cpp  ekf_localization_node.cpp
src/jzt_robot/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/jzt_robot/behavior_trees/: navigate_and_dock.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_through_poses_w_replanning_and_recovery.xml_dockaction  navigate_to_pose_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml2  navigate_to_pose_w_replanning_and_recovery.xml_dockaction  navigate_to_pose_with_smoothing.xml  rpp_nav_to_pose.xml
src/jzt_robot/config/: ackermann_controllers.yaml  ekf_localization.yaml  gamepad_config.yaml  gazebo_params.yaml  jzt_robot_2d.lua  jzt_robot_2d_double_lidar.lua  localization_2d.lua  localization_2d_double_lidar.lua  mecanum_controllers.yaml
src/jzt_robot/include/jzt_robot/: cmd_vel_mux.hpp  docking_controller.hpp
src/jzt_robot/include/jzt_robot/plugins/action/: bt_compute_staging_pose.hpp  bt_docking_action.hpp  bt_set_nav2_param.hpp
src/jzt_robot/launch/: cartographer_slam.launch.py  gamepad_teleop.launch.py  gazebo_ackermann.launch-roscontrol.py  gazebo_ackermann.launch.py  gazebo_ackermann.launch_old.py  gazebo_diff.launch.py  gazebo_mecanum.launch.py  navigation.launch.py  navigation.launch_double_lidar.py  slam.launch.py  slam.launch_double_lidar.py  test.txt
src/jzt_robot/param/: backup_nav2_mppi_cartographer.yaml  nav2_params_dwb_cartographer.yaml  nav2_params_mppi_cartographer.yaml  nav2_params_mppi_cartographer_ackermann.yaml  nav2_params_mppi_cartographer_ackermann_double_lidar.yaml  nav2_params_mppi_cartographer_bk.yaml  nav2_params_mppi_cartographer_double_lidar.yaml  nav2_params_mppi_cartographer_mecanum.yaml  nav_params_dwb_amcl.yaml
src/jzt_robot/rviz/: common_nav2.rviz  nav2_double_lidar.rviz
src/jzt_robot/src/: ackermann_calib_trajectory_node.cpp  ackermann_verifier_node.cpp  bt_compute_staging_pose.cpp  bt_docking_action.cpp  bt_set_nav2_param.cpp  cmd_vel_mux.cpp  cmd_vel_relay_node.cpp  docking_controller.cpp  gamepad_teleop_node.cpp
src/jzt_robot/urdf/: jzt_ackermann.urdf  jzt_ackermann_deepseek.urdf  jzt_ackermann_old.urdf  jzt_ackermann_v2.urdf  jzt_diff.urdf  jzt_mecanum copy.urdf  jzt_mecanum.urdf  robot_template.xacro
src/jzt_robot/urdf/S2F30_V4.2/: base.urdf.xacro  dashgobase.xacro
src/jzt_robot/urdf/ackermann/: jz_ackermann_body.xacro  jz_ackermann_gazebo_friction.xacro  jz_ackermann_materials.xacro  jz_ackermann_robot.urdf.xacro  jz_ackermann_ros2_control.xacro  jz_ackermann_sensors.xacro  jz_ackermann_wheels.xacro
src/jzt_robot/urdf/diff/: common_properties.xacro  diff_base.xacro  diff_wheels.xacro  gazebo_wheels.xacro  jzt_double_lidar.urdf  robot.xacro  ros2_control_real.xacro  ros2_control_sim.xacro  sensors_gazebo.xacro
src/jzt_robot/urdf/mecanum/: common_properties.xacro  demo.urdf  gazebo_wheels copy.xacro  gazebo_wheels.xacro  mecanum_base.xacro  mecanum_wheels copy.xacro  mecanum_wheels.xacro  robot.xacro  ros2_control_real.xacro  ros2_control_sim.xacro  sensors_gazebo.xacro
src/jzt_robot/world/: jz_house.world  jzt_factory.world  jzt_factory_sz.world  jzt_work_room.world
src/jzt_robot_msgs/: CMakeLists.txt  package.xml
src/jzt_robot_msgs/action/: Dock.action
src/pure_pursuit/: CMakeLists.txt  README.md  package.xml
src/pure_pursuit/include/pure_pursuit/: pure_pursuit.h  pure_pursuit_node.hpp  types.h
src/pure_pursuit/src/: main.cpp  path_publisher.cpp  pure_pursuit.cpp  pure_pursuit_node.cpp
src/robust_localization/: CMakeLists.txt  package.xml
src/robust_localization/config/: adaptive_ekf.yaml  degeneracy_detector.yaml  nav2_crowd_params.yaml
src/robust_localization/include/robust_localization/: adaptive_ekf.hpp  degeneracy_detector.hpp  robust_scan_matcher.hpp
src/robust_localization/launch/: nav2_demo_crowd.launch.py  robust_localization.launch.py
src/robust_localization/src/: adaptive_ekf.cpp  degeneracy_detector.cpp  ipc.cpp  robust_localization_node.cpp  robust_scan_matcher.cpp
src/triple_steer_robot/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/triple_steer_robot/config/: gazebo_params.yaml  ros2_control.yaml
src/triple_steer_robot/launch/: gazebo_sim.launch.py
src/triple_steer_robot/param/: nav2_params.yaml
src/triple_steer_robot/rviz/: robot.rviz
src/triple_steer_robot/src/: triple_steer_kinematics_node.cpp
src/triple_steer_robot/urdf/: robot_base.xacro  ros2_control.xacro  sensors.xacro  triple_steer_robot.urdf.xacro
src/triple_steer_robot/world/: long_channel.world
