<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jzt_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bwply2009@163.com">kisdy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ackermann_steering_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- BUGFIX: 以下依赖 CMakeLists.txt 中有 find_package，但 package.xml 原来缺失 -->
  <!-- 缺失会导致运行时 colcon/rosdep 无法解析依赖链，导航栈加载失败 -->
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_util</depend>
  <depend>jzt_robot_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>